<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/activity_margin_horizontal"
  tools:context=".AddSongFragment">

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text_view_label"
    style="@style/TextAppearance.AppCompat.Display1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_song"
    android:textColor="@color/colorPrimary"
    app:layout_constraintBottom_toTopOf="@+id/edit_text_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/edit_text_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_margin_horizontal"
    android:hint="@string/song_title"
    android:imeOptions="actionNext"
    android:inputType="textCapWords"
    app:layout_constraintBottom_toTopOf="@+id/edit_text_artist"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_view_label"
    app:layout_constraintVertical_bias=".1"
    app:layout_constraintVertical_chainStyle="packed" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/edit_text_artist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_margin_horizontal"
    android:hint="@string/song_artist"
    android:imeOptions="actionNext"
    android:inputType="textCapWords"
    app:layout_constraintBottom_toTopOf="@+id/edit_text_year"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

  <androidx.appcompat.widget.AppCompatEditText
    android:id="@+id/edit_text_year"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_margin_horizontal"
    android:hint="@string/song_year"
    android:imeActionLabel="@string/button_done"
    android:imeOptions="actionDone"
    android:inputType="number"
    app:layout_constraintBottom_toTopOf="@+id/button_save"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_artist" />

  <Button
    android:id="@+id/button_save"
    style="@style/Base.Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_margin_horizontal"
    android:text="@string/button_save"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_year" />


</androidx.constraintlayout.widget.ConstraintLayout>
